feat#1 :: 테스트 코드 .get(0) -> getFirst()로 수정